[workspace]
members = ["lib/comic2pdf"]
resolver = "3"

# Shared dependencies across all crates (optional, minimizes version drift)
[workspace.dependencies]
zip = "2.2"
unrar = "0.5"
image = "0.25"
printpdf = "0.7"
pdf-writer = "0.12"
rayon = "1.10"    # For blazing fast parallel image embedding
natord = "1.0"     # Critically important for sorting pages correctly (1, 2, ... 10)
tempfile = "3.10"  # To cleanly extract pages to disk without bloating RAM
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
anyhow = "1.0"
